# ACH2118-2025-EP1

./: .gitignore  CONFIG_EXPLAINED.md  CONFIG_SIMPLE.md  HOW_TO_PREDICT.md  INDEX.md  MIGRATION.md  PREDICTION_SUMMARY.md  PREDICT_GUIDE.md  QUICKSTART.md  README.md  WORD2VEC_GUIDE.md  WORD2VEC_SUMMARY.md  example_word2vec.py  examples_config.py  examples_inference.py  experiments.csv  main.py  predict_cli.py  pyproject.toml  results.csv  tutorial_config.py
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  run-experiments.yml  train-models.yml
config/: README.md  pipelines.example.json  pipelines.json  pipelines.json.backup
models/: arcaico_moderno__tfidf_lr.joblib  complexo_simples__tfidf_lr.joblib  literal_dinamico__tfidf_lr.joblib
reports/: experiments_report.md
src/ep1/: config.py  data.py  experiments.py  inference.py  predict.py  report.py  train.py
src/ep1/models/: mlp.py  models.py  sbert.py  word2vec.py
